<?xml version="1.0"?>
<package>
  <name>rosserial_tivac_socket_tutorials</name>
  <version>0.0.1</version>
  <description>rosserial tutorials for using rosserial socket communication on TivaC connected launchpad boards.</description>
  
  <author>Vitor Matos</author>
  <maintainer email="vmatos.pt@gmail.com">Vitor Matos</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/rosserial_tivac_socket/Tutorials</url>
  <url type="repository">https://github.com/vmatos/rosserial_tivac_socket_tutorials</url>
  <author email="vmatos.pt@gmail.com">Vitor Matos</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>rosserial_tivac_socket</build_depend>  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>rosserial_tivac_socket</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
